Incorporating new yaml changes in IT for Issue#1970,#1971
Signed-off-by: Uday Kumar Chintala <udaych20@gmail.com>